<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewItemNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/textViewItemRazza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        tools:text="@string/race" />

    <TextView
        android:id="@+id/textViewItemClasse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        tools:text="@string/Class" />

</LinearLayout>